Minor style changes

--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -8,6 +8,6 @@ header {
   margin-top: 0;
   a {
     text-decoration: none;
-    color: map-get($colors, anthracite);
+    color: map-get($colors, theme);
   }
 }
