--- a/src/views/sidebar.html
+++ b/src/views/sidebar.html
@@ -9,5 +9,8 @@
       {{pageContent}}
     {{/pageContent}}
     <span class="sketch" id="sketch"></span>
+    <pre>
+      <code class="language-javascript" id="code"></code>
+    </pre>
   </div>
 </div>
