--- a/src/views/sidebar.html
+++ b/src/views/sidebar.html
@@ -9,7 +9,7 @@
       {{pageContent}}
     {{/pageContent}}
     <span class="sketch" id="sketch"></span>
-    <pre id="code-wrapper">
+    <pre class="code-wrapper">
       <code class="language-javascript" id="code"></code>
     </pre>
   </div>
